# ImmofeuControl

./: .env.example  .gitignore  .railwayignore  Dockerfile  RAILWAY_DEPLOY.md  README.md  docker-compose.yml  main.py  pyproject.toml  railway.toml  requirements.txt
config/: settings.py
src/: app.py
src/alerts/: alert_manager.py
src/api/: routes.py  schemas.py
src/cameras/: manager.py
src/core/: events.py  models.py
src/detection/: detector.py  pipeline.py
static/css/: style.css
static/js/: dashboard.js
templates/: dashboard.html  map.html
tests/: test_detection.py
