[build-system]
requires = ["setuptools>=68.0", "wheel"]
build-backend = "setuptools.backends._legacy:_Backend"

[project]
name = "immofeucontrol"
version = "1.0.0"
description = "Accident Detection & Emergency Alert System - Real-time camera monitoring with AI-powered incident detection"
readme = "README.md"
requires-python = ">=3.10"
license = {text = "MIT"}

[tool.pytest.ini_options]
testpaths = ["tests"]
asyncio_mode = "auto"
